data/forge_javadoc/1.7.10/processed/net_minecraft_command_CommandGameMode.md
# CommandGameMode

**Inheritance:** java.lang.Object → net.minecraft.command.CommandBase → net.minecraft.command.CommandGameMode

## Class signature

```java
public class CommandGameMode extends CommandBase
```

## Constructors

- `CommandGameMode()`

## Methods

- `java.util.List addTabCompletionOptions(ICommandSender p_71516_1_, java.lang.String[] p_71516_2_)`
- `java.lang.String getCommandName()`
- `java.lang.String getCommandUsage(ICommandSender p_71518_1_)`
- `protected WorldSettings.GameType getGameModeFromCommand(ICommandSender p_71539_1_, java.lang.String p_71539_2_)`
- `protected java.lang.String[] getListOfPlayerUsernames()`
- `int getRequiredPermissionLevel()`
- `boolean isUsernameIndex(java.lang.String[] p_82358_1_, int p_82358_2_)`
- `void processCommand(ICommandSender p_71515_1_, java.lang.String[] p_71515_2_)`