data/forge_javadoc/1.8.9/processed/net_minecraft_command_CommandGameMode.md
# CommandGameMode

**Inheritance:** java.lang.Object → net.minecraft.command.CommandBase → net.minecraft.command.CommandGameMode

## Class signature

```java
public class CommandGameMode extends CommandBase
```

## Constructors

- `CommandGameMode()`

## Methods

- `java.util.List<java.lang.String> addTabCompletionOptions(ICommandSender sender, java.lang.String[] args, BlockPos pos)`
- `java.lang.String getCommandName()` — Gets the name of the command
- `java.lang.String getCommandUsage(ICommandSender sender)` — Gets the usage string for the command.
- `protected WorldSettings.GameType getGameModeFromCommand(ICommandSender p_71539_1_, java.lang.String p_71539_2_)` — Gets the Game Mode specified in the command.
- `protected java.lang.String[] getListOfPlayerUsernames()` — Returns String array containing all player usernames in the server.
- `int getRequiredPermissionLevel()` — Return the required permission level for this command.
- `boolean isUsernameIndex(java.lang.String[] args, int index)` — Return whether the specified command parameter index is a username parameter.
- `void processCommand(ICommandSender sender, java.lang.String[] args)` — Callback when the command is invoked